--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.4",
     "next": "15.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
-    "typescript": "^5",
     "tailwindcss": "^4",
-    "@tailwindcss/postcss": "^4"
+    "typescript": "^5"
   }
 }
